<resources>
    <string name="app_name">Linear_Layout</string>
    <string name="var1">ini pesan</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="txEmail">Email</string>
    <string name="txPassword">Password</string>
    <string name="label2">Login Berhasil</string>

</resources>
